--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
 
 /* MAKING THE MARKS */
 
+/* THE X */
 .cell.x::before,
 .cell.x::after {
   content: '';
@@ -75,4 +76,24 @@ body {
 }
 .cell.x::after {
   transform: rotate(-45deg);
+}
+
+/* THE O */
+.cell.circle::before,
+.cell.circle::after {
+  content: '';
+  position: absolute;
+  border-radius: 50%;
+}
+
+.cell.circle::before {
+  width: var(--mark-size);
+  height: var(--mark-size);
+  background-color: black;
+}
+
+.cell.circle::after {
+  width: calc(var(--mark-size) * 0.7);
+  height: calc(var(--mark-size) * 0.7);
+  background-color: white;
 }
